--- a/src/input.css
+++ b/src/input.css
@@ -135,10 +135,10 @@
    /*HOME BANNER*/
 
     .banner{
-        @apply pt-23.5 text-white max-w-full md:pt-28 lg:pt-36;
+        @apply pt-23.5 text-white max-w-full md:pt-28 lg:pt-36 ;
     }
     .banner .banner__wrapper {
-        @apply bg-[url(/dist/img/banner.png)] bg-cover bg-center bg-no-repeat max-w-[95%] mx-auto h-[70vh] pt-14 pl-2
+        @apply bg-[url(/dist/img/banner.png)] bg-cover bg-center bg-no-repeat max-w-[95%] mx-auto h-[40rem] pt-14 pl-2
                     md:mx-auto md:bg-size-[80rem] md:pt-40 md:h-200 md:pl-12
                     lg:max-w-full lg:bg-cover lg:h-175 lg:pt-28 lg:pl-34;
     }
@@ -300,7 +300,7 @@
     @apply lg:bg-black lg:text-primary;
     }
     .menu__content .menu__item:hover img {
-    @apply opacity-50;
+    @apply lg:opacity-50;
     }
     .menu__content .menu__item:hover .menu__item__text {
     @apply lg:bottom-6;
