--- a/src/output.css
+++ b/src/output.css
@@ -381,9 +381,6 @@
   .py-3\.5 {
     padding-block: calc(var(--spacing) * 3.5);
   }
-  .py-4 {
-    padding-block: calc(var(--spacing) * 4);
-  }
   .font-\[Oswald\] {
     font-family: Oswald;
   }
@@ -611,11 +608,6 @@
     @media (width >= 64rem) {
       --tw-translate-y: -50%;
       translate: var(--tw-translate-x) var(--tw-translate-y);
-    }
-  }
-  .lg\:flex-row {
-    @media (width >= 64rem) {
-      flex-direction: row;
     }
   }
   .lg\:justify-between {
@@ -1019,7 +1011,7 @@
 }
 .banner .banner__wrapper {
   margin-inline: auto;
-  height: 70vh;
+  height: 40rem;
   max-width: 95%;
   background-image: url(/dist/img/banner.png);
   background-size: cover;
@@ -1630,7 +1622,9 @@
   }
 }
 .menu__content .menu__item:hover img {
-  opacity: 50%;
+  @media (width >= 64rem) {
+    opacity: 50%;
+  }
 }
 .menu__content .menu__item:hover .menu__item__text {
   @media (width >= 64rem) {
